# truth_table

./: .gitignore  CMakeLists.txt  LICENCE.md  README.md  logic_table  logic_table.cpp  main.cpp
learning_resources/: Mladen_UOR_R_smer.ppt  propcalc.pptx
src/: .#valuation.hpp  Makefile  expression_tree.cpp  expression_tree.hpp  input.cpp  input.hpp  logic_expression.cpp  logic_expression.hpp  logic_table.cpp  logic_table.hpp  main.cpp  parse_data.cpp  postorder_iterator.cpp  postorder_iterator.hpp  table.cpp  table.hpp  tree_iterator.cpp  truth_table.cpp  truth_table.hpp  valuation.cpp  valuation.hpp  variation.cpp  variation.hpp
